<resources>
    <string name="app_name">Math Me!</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_help">Help</string>
    <string name="image_of_a_test">Image of a test</string>
    <string name="image_of_a_timer">Image of a timer</string>
    <string name="timed_mode">Timed Mode</string>
    <string name="high_score_0">High Score: 0</string>
    <string name="test_mode">Test Mode</string>
    <string name="turn_on_dark_theme">Turn on dark theme</string>
    <string name="turn_on_notification_reminder">Turn on notification reminder</string>
    <string name="reset_data">Reset Data</string>
    <string name="notification_set_for">Notification set for</string>
    <string name="test_mode_help">In the test mode, you choose the number of questions you want to answer and then proceed to
    answer these questions. At the end, you will find your result along with the questions you got wrong so you can learn from your mistakes.
    Now, you may be wondering about division. Well just try to get close to it, no need for decimals.</string>
    <string name="timed_mode_help">In the timed mode, you keep answering questions until the time runs out, the number of questions you get right
    is your score. Keep trying to beat your high score! While playing, getting an answer wrong will result in
        your device vibrating. Vibration bad, no vibration good.</string>
    <string name="death_mode_help">In infinite mode, you keep answering questions until you get one wrong. So, one wrong answer and you\'re
    done. Think long and hard before pressing the "next" button!</string>
    <string name="speed_mode_help">In speed mode, you choose the number of questions you want to answer but there is also a stopwatch
    running. The objective here is to keep improving your time which means improving your speed as well!</string>

    <string name="choose_the_operations">Choose the Operations:</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="division">Division</string>
    <string name="multiplication">Multiplication</string>
    <string name="choose_number_limit">Choose Number Limit:</string>
    <string name="num_limit_label">0</string>
    <string name="choose_number_of_questions">Choose Number of Questions:</string>
    <string name="q_limit_label">0</string>
    <string name="take_test_label">Take Test</string>
    <string name="current_question_label">Question Number </string>
    <string name="answer_window_content">0</string>
    <string name="question_content">Are you ready?</string>
    <string name="back_test"><![CDATA[<- BACK]]></string>
    <string name="next_test"><![CDATA[NEXT ->]]></string>
    <string name="test_hint">Enter your answer</string>
    <string name="start_button_label">YES</string>
    <string name="test_result_header_label">You got…</string>
    <string name="fraction_score">19/20</string>
    <string name="test_percent">95%</string>
    <string name="view_results">View Results</string>
    <string name="take_me_home">Take me Home</string>
    <string name="title_activity_test_results">TestResults</string>
    <string name="test_mode_result">Test Mode Result</string>
    <string name="save_answer_label">Save Answer</string>
    <string name="save_defaults_label">Save as Defaults</string>
    <string name="turn_off_dark_theme">Turn off dark theme</string>
    <string name="toggle_dark_theme">Toggle dark theme</string>
    <string name="choose_time">Choose Time:</string>
    <string name="start_timed_mode">Start Timed Mode</string>
    <string name="time_120">120s</string>
    <string name="time_90">90s</string>
    <string name="time_60">60s</string>
    <string name="time_30">30s</string>
    <string name="sudden_death">Infinite Mode</string>
    <string name="next_button_label">Next</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="score_label">Score: 0</string>
    <string name="time_label">Time: 30s</string>
    <string name="question_tv">Question</string>
    <string name="answer_tv">Answer</string>
    <string name="accuracy">Accuracy:</string>
    <string name="score">Score</string>
    <string name="sudden_death_mode">Infinite Mode</string>
    <string name="start">Start</string>
    <string name="best_time">Best Time: 0s</string>
    <string name="speed_mode">Speed Mode</string>
    <string name="math_bad">Math Bad</string>
    <string name="anime_flix">Anime Flix</string>
    <string name="anime_vibe">Anime Vibe</string>
    <string name="anime_twist">Anime Twist</string>
    <string name="loading">loading</string>
    <string name="wonderful_subs">Wonderful Subs</string>
    <string name="placeholder_score">20</string>
    <string name="i_am_speed">I am Speed!</string>
    <string name="time">Time:</string>
    <string name="time_placeholder">30s</string>
    <string name="anime_ultima">Anime Ultima</string>
    <string name="last_mark">Last Mark: 0%</string>
    <string name="fate">Fate</string>
    <string name="operators">Operators:</string>
    <string name="number_of_questions">Number of Questions:</string>
    <string name="number_limit">Number Limit:</string>
    <string name="test_score">Test Score:</string>
    <string name="title_activity_test_score_list">TestScoreList</string>
    <string name="title_activity_time_score_list">TimeScoreList</string>
    <string name="test_scores">Test Scores</string>
    <string name="time_scores">Time Scores</string>
    <string name="speed_scores">Speed Scores</string>
    <string name="infinity_scores">Infinity Scores</string>
    <string name="view_scores">View Scores</string>
    <string name="sort_asc">Sort ASC</string>
    <string name="sort_desc">Sort DESC</string>
    <string name="date">Date</string>
    <string name="title_activity_death_score_list">DeathScoreList</string>
</resources>
