<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_time_mode_settings"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".settings.TimeModeSettings">

    <TextView
        android:id="@+id/choose_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/google_regular"
        android:text="@string/choose_the_operations"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/google_regular"
            android:onClick="onOperationChosen"
            android:text="@string/addition"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/google_regular"
            android:onClick="onOperationChosen"
            android:text="@string/subtraction"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/google_regular"
            android:onClick="onOperationChosen"
            android:text="@string/division"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/google_regular"
            android:onClick="onOperationChosen"
            android:text="@string/multiplication"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/choose_num_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/google_regular"
            android:text="@string/choose_number_limit"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/num_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/google_regular"
            android:text="@string/num_limit_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColor"
            android:textSize="18sp" />


    </LinearLayout>


    <SeekBar
        android:id="@+id/seek_max_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:max="20" />

    <TextView
        android:id="@+id/time_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/google_regular"
        android:text="@string/choose_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/timeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/thirty"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/google_regular"
            android:text="@string/time_30"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/sixty"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_regular"
            android:text="@string/time_60"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/ninety"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_regular"
            android:text="@string/time_90"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/one_twenty"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_regular"
            android:text="@string/time_120"
            android:textColor="@color/textColor" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:foreground="@drawable/ripple"
            tools:ignore="UnusedAttribute"
            android:id="@+id/set_defaults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/start_timed"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button4"
            android:fontFamily="@font/google_regular"
            android:onClick="onSaveDefaults"
            android:text="@string/save_defaults_label"
            android:textSize="18sp" />

        <Button
            android:foreground="@drawable/ripple"
            tools:ignore="UnusedAttribute"
            android:id="@+id/start_timed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/google_regular"
            android:onClick="onTestLaunch"
            android:text="@string/start_timed_mode"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>