<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestMode">
    <TextView
        android:layout_margin="12dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textColor"
        android:fontFamily="@font/google_regular"
        android:id="@+id/current_question_num"
        android:text="@string/current_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="60dp"
        android:textSize="80sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:fontFamily="@font/google_black"
        android:id="@+id/question_window"
        android:text="@string/question_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/current_question_num" />

    <Button
        android:layout_width="wrap_content"
        android:onClick="onYes"
        android:id="@+id/start_button"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/question_window"
        android:text="@string/start_button_label"/>

    <EditText
        android:id="@+id/answer_edit_text"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:hint="@string/test_hint"
        android:inputType="number|numberSigned"
        android:visibility="invisible"
        tools:ignore="Autofill" />


    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/test_buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="onBack"
            android:layout_margin="4dp"
            android:id="@+id/back_button"
            android:background="@drawable/rounded_button2"
            android:fontFamily="@font/google_regular"
            android:text="@string/back_test"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_margin="4dp"
            android:onClick="onNext"
            android:background="@drawable/rounded_button"
            android:id="@+id/next_button"
            android:fontFamily="@font/google_regular"
            android:text="@string/next_test"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:layout_margin="4dp"
        android:visibility="invisible"
        android:background="@drawable/rounded_button3"
        android:id="@+id/save_button"
        android:onClick="onSave"
        android:layout_width="match_parent"
        android:fontFamily="@font/google_regular"
        android:layout_height="wrap_content"
        android:layout_above="@id/test_buttons"
        android:layout_centerHorizontal="true"
        android:text="@string/save_answer_label" />

</RelativeLayout>