<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".mode.SpeedMode">

    <TextView
        android:visibility="invisible"
        android:layout_margin="12dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textColor"
        android:fontFamily="@font/google_regular"
        android:id="@+id/current_question_num"
        android:text="@string/current_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/current_question_num"
        android:visibility="invisible"
        android:id="@+id/stop_watch"
        android:layout_centerHorizontal="true"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:fontFamily="@font/google_regular"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/question_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop_watch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/google_black"
        android:gravity="center"
        android:text="@string/question_content"
        android:textColor="@color/textColor"
        android:textSize="80sp" />

    <Button
        android:foreground="@drawable/ripple"
        tools:ignore="UnusedAttribute"
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_window"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:onClick="onYes"
        android:text="@string/start_button_label" />

    <EditText
        android:id="@+id/answer_edit_text"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:hint="@string/test_hint"
        android:inputType="number|numberSigned"
        android:visibility="invisible"
        tools:ignore="Autofill" />

    <Button
        android:foreground="@drawable/ripple"
        tools:ignore="UnusedAttribute"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/google_regular"
        android:onClick="onNext"
        android:text="@string/next_test" />

</RelativeLayout>
